--- a/style/base.css
+++ b/style/base.css
@@ -70,3 +70,8 @@
 .tooltip-value {
   margin-top: 4px; /* Add margin as needed */
 }
+
+.lm-TabBar-tabIcon {
+  padding-right: 5px;
+  margin-top: 3px;
+}
