--- a/style/base.css
+++ b/style/base.css
@@ -17,6 +17,8 @@
     var(--jp-layout-color0),
     var(--jp-layout-color4)
   ); */
+  overflow-y: auto;
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
 }
@@ -77,5 +79,15 @@
 }
 
 .multi-chart-title {
-  font-size: 14px !important;
+  font-size: 12px !important;
+}
+
+.hidden-brush-for-sync {
+  display: none !important;
+}
+
+.gpu-dashboard-toolbar-button {
+  background-color: #76b900;
+  color: var(--jp-inverse-layout-color0);
+  float: inline-end;
 }
